static/plotbot/css/index.css
/* mobile first */
html{
	background:#cce;
}

/* tab time!! */

.all_tools{
	display:flex;		display: -webkit-flex;
	flex-direction:row;	-webkit-flex-direction: row;
	height:40vh;
}
.toolbar{
	background: #f0f0f0;
	width:100%;
	flex:2;					-webkit-flex:2;
	display:flex;			display: -webkit-flex;
	flex-direction:column;	-webkit-flex-direction: column;
}

.tabs{
	list-style: none;
	flex-shrink:0;					-webkit-flex-shrink:0;
	padding:0;
	margin:0;
	display:flex;					display: -webkit-flex;
	flex-direction:row;				-webkit-flex-direction: row;
	justify-content: flex-start;	-webkit-justify-content: flex-start;
}
.tab{
	flex:1;
	display:flex;			display: -webkit-flex;
	justify-content:center;	-webkit-justify-content: center;
	align-items:center;		-webkit-align-items: center;
	white-space: nowrap;	-webkit-white-space: nowrap;

	padding:3px;
	background:#d8d8d8;

	font-family: 'Roboto', sans-serif;
	font-size:1.2rem;

	border:1px solid #808080;
	border-left:none;
	
	cursor:pointer;
	transition: .2s all; -webkit-transition: .2s all;
}
.tab:first-child{
	border-left: 1px solid #808080;
}
.tab:not(.selected_tab):hover{
	background:#e8e8e8;
}
.selected_tab{
	background:#f0f0f0;
	cursor:default;
	border-bottom-color:rgba(0,0,0,0);
}
.toolset_container{
	border: 1px solid #808080;
	border-top:0px;
	flex:1;							-webkit-flex: 1;
	display:flex;					-webkit-display: flex;
	flex-direction:column;			-webkit-flex-direction: column;
	margin:0;
}
.toolset{
	flex:1;
	display:flex;		display: -webkit-flex;
	flex-direction:row;	-webkit-flex-direction: row;
	/* this hides the toolset, which corresponds to a tab, until its tab is selected */
	display:none;		-webkit-display: none;
}
.showing_toolset{
	display: flex;		-webkit-display: flex;
}
.spec_config{
	flex: 1;				-webkit-flex: 1;
	display:flex;			-webkit-display: flex;
	flex-direction: row;	-webkit-flex-direction: row;
}
.tools_col{
	flex:1;					-webkit-flex: 1;
	display: flex;			-webkit-display: flex;
	flex-direction: column;	-webkit-flex-direction: column;
	padding:10px;
}

.setting{
	display:flex;					display: -webkit-flex;
	flex-direction:row;				-webkit-flex-direction: row;
	justify-content: space-between;	-webkit-justify-content: space-between;
	align-items:center;				-webkit-align-items: center;
	width:100%;
	margin:5px;
	white-space: nowrap;			-webkit-white-space: nowrap;
}
.right{
	float:right;
}
.range{
	width:50%;
	float:right;
	display:flex;					display: -webkit-flex;
	flex-direction:row;				-webkit-flex-direction: row;
	justify-content:space-between;	-webkit-justify-content: space-between;
	align-items:center;				-webkit-align-items: center;
}
input[type=number]{
	width:5em;
}
.wide_field{
	width:14.4rem;
}

.col_title{
	margin: 0 auto; /* 0 for top & bottom, auto for sides */
	font-family: 'Roboto', sans-serif;
}

.spec_list{
	flex: 1;					-webkit-flex: 1;
	background-color: #f0f0f0;
	border: 1px solid #808080;
	border-left:0;
	font-family: 'Roboto', sans-serif;
}

.table_row{
	width:100%;
	display: flex;				-webkit-display: flex;
	flex-direction: row;		-webkit-flex-direction: row;
	flex-grow: 0;				-webkit-flex-grow: 0;
	align-items:center;			-webkit-align-items: center;
	border-collapse: collapse;
	border-bottom: 1px solid #c0c0c0;
}
.table_row:not(.head_row):last-child{
	border-bottom:0;
}
.head_row{
	height:23px;
	padding:3px;
	border-bottom: 1px solid #a0a0a0;
	background: #e0e0e0;
}

.unselected_row{
	transition: background-color .2s ease
}
.unselected_row:hover{
	cursor:pointer;
	background-color:rgba(128,128,128,.15);
}
.selected_row{
	background-color:rgba(128,128,128,.3);
}


/* flex table styling for spec list */
.text{
	flex: 3;					-webkit-flex: 3;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding-right:10px;
	padding-left: 10px;
	width:100px;
}
.color{
	flex:2;					-webkit-flex: 2;
}
.color_patch{
	height:1rem;
	border:1px solid #a0a0a0;
	margin:1px;
}
.color_patch{
	width:50px;
}
.showing{
	flex:1;					-webkit-flex: 1;
	width:50px;
	margin-right:10px;
}
/* end of flex table styling */

.showing_config{
	display:flex;		-webkit-display: flex;
}
.hidden_config{
	display:none;		-webkit-display: none;
}

/* preprocessing */
.preprocess_list{
	height:100%;
	min-width:80%;
	margin:auto;
	display: flex;					-webkit-display: flex;
	flex-direction: column;			-webkit-flex-direction: column;
	justify-content: space-around;	-webkit-justify-content: space-around;
	align-items: center;			-webkit-align-items: center;
}
.preproc_selector{
	width:100%;
	border: 1px solid #c0c0c0;
	border-radius:3px;
	cursor: pointer;
}
.selected_preproc{
	background: #fafafa;
}
.preproc_name{
	margin: 0;
	padding:5px;
	text-align:center;
	font-family: 'Roboto', sans-serif;
}
.preproc_settings{
	display:none;
}
.selected_preproc_settings{
	display:block;
}

.running_preproc{
	font-style:italic;
}
.running_preproc:hover{
}

.setting_button{
	min-width:50%;
	margin:auto;
}

/* flex table stying for db list */

.db_list{
	width: 100%;
	flex: 1;				-webkit-flex: 1;
	display: flex;			-webkit-display: flex;
	flex-direction: column;	-webkit-flex-direction: column;
	border: 1px solid #a0a0a0;
}
.scrollable{
	flex: 1;				-webkit-flex: 1;
	overflow: scroll;
}
.db_list .head_row{
	cursor: default;
}
.db_list .table_row:not(.head_row){
	cursor: pointer;
}
.db_id{
	flex: 1;				-webkit-flex: 1;
	width:20px;
}
.db_name{
	flex: 3;				-webkit-flex: 3;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding-right: 5px;
	padding-left:5px;
	width:100px;
}
.db_source{
	flex: 2;				-webkit-flex: 2;
	width: 40px;
}
.db_wav{
	flex: 1;				-webkit-flex: 1;
	width: 30px;
}

.db_spec_row{
	transition: background-color .2s ease;
}
.selected_db_spec_row{
	background-color: ;
}

/* end of flex table styling */

